fix swagger bug
