# frontend/server/docs/swagger.json
@@ -233,14 +233,6 @@
                         "required": true
                     },
                     {
-                        "maximum": 10,
-                        "minimum": 1,
-                        "type": "integer",
-                        "name": "stage",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
                         "type": "string",
                         "description": "Authorization",
                         "name": "Authorization",
@@ -286,7 +278,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/db.Score"
+                                "$ref": "#/definitions/db.PracScore"
                             }
                         }
                     }
@@ -324,7 +316,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/db.Score"
+                                "$ref": "#/definitions/db.PracScore"
                             }
                         }
                     }
@@ -946,9 +938,6 @@
                 "end_price": {
                     "type": "number"
                 },
-                "entry_price": {
-                    "type": "number"
-                },
                 "entry_time": {
                     "type": "string"
                 },
@@ -969,9 +958,6 @@
                 },
                 "roe": {
                     "type": "number"
-                },
-                "stage": {
-                    "type": "integer"
                 }
             }
         },
@@ -1172,32 +1158,12 @@
                 }
             }
         },
-        "db.RankingBoard": {
+        "db.PracScore": {
             "type": "object",
             "properties": {
-                "comment": {
+                "created_at": {
                     "type": "string"
                 },
-                "final_balance": {
-                    "type": "number"
-                },
-                "nickname": {
-                    "type": "string"
-                },
-                "photo_url": {
-                    "type": "string"
-                },
-                "score_id": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "db.Score": {
-            "type": "object",
-            "properties": {
                 "endprice": {
                     "type": "number"
                 },
@@ -1222,6 +1188,9 @@
                 "position": {
                     "type": "string"
                 },
+                "quantity": {
+                    "type": "number"
+                },
                 "remain_balance": {
                     "type": "number"
                 },
@@ -1233,6 +1202,32 @@
                 },
                 "stage": {
                     "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "db.RankingBoard": {
+            "type": "object",
+            "properties": {
+                "comment": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "final_balance": {
+                    "type": "number"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string"
+                },
+                "score_id": {
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
